--- a/projects/calculadora-juros/style.css
+++ b/projects/calculadora-juros/style.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
-
 :root {
   --linear-gradient: 90deg, #38bdf8, #6d28d9, #4c1d95;
   --color-text: #dfe3ea;
 }
 
-* {
+body {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  line-height: normal;
   box-sizing: border-box;
 }
 
@@ -58,7 +56,7 @@
   width: 100%;
 }
 
-.input-field label{
+.input-field label {
   font-size: 15px;
   columns: var(--color-text);
   font-weight: 500;
@@ -82,7 +80,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  
+
 }
 
 #feeType span {
@@ -108,4 +106,3 @@
   border-radius: 4px;
   cursor: pointer;
 }
-  
