--- a/projects/relogio-digital/style.css
+++ b/projects/relogio-digital/style.css
@@ -8,12 +8,11 @@
   --bg-mainRef: #ffe53bd8;
 }
 
-* {
+/* * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
  
-}
+} */
 
 body {
   height: 100vh;
@@ -22,6 +21,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: "Poppins", sans-serif;
+
 }
 
 
