--- a/projects/calculadora-juros/style.css
+++ b/projects/calculadora-juros/style.css
@@ -71,6 +71,11 @@ body {
   padding: 5px;
 }
 
+.input-field input::placeholder {
+  font-size: inherit;
+  color: #bdbdbd;  
+}
+
 .input-field input:focus {
   outline: none;
 }
