--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
 
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 body {
-  font-family: "Poppins", sans-serif; 
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+
 }
