--- a/projects/calculadora-imc/style.css
+++ b/projects/calculadora-imc/style.css
@@ -4,9 +4,6 @@
   --gray-detail: #afafaf;
   --warning: #fa5a5a;
   --success: #4bd163;
-
-
-
 }
 
 * {
@@ -28,7 +25,7 @@ body {
   width: 100%;
   align-items: center;
   justify-content: center;
-  gap: 8%;
+  gap: 2%;
 }
 
 #img img {
@@ -39,16 +36,14 @@ body {
 #calculator {
   display: flex;
   flex-direction: column;
-  padding: 3em;
+  padding: 2em 2.5em 2em 2.5em;
   color: #ffffff;
   background-color: #38307e;
   border-radius: 8px;
-  gap: 2rem;
+  gap: 1.6rem;
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.46);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.46);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.46);
-
-
 }
 
 #main-form {
@@ -71,6 +66,29 @@ body {
   width: 12.8rem;
   height: 2px;
   border-radius: 2px;
+}
+
+form .user-type {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.0rem;
+}
+
+.user-type label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
+}
+
+input[type="radio"] {
+  height: 1rem;
+  width: 1rem;
+  margin-left: 0;
+  margin-right: 0.4rem;
+  margin-bottom: 0.1rem;
+  cursor: pointer;
 }
 
 form .input-box {
@@ -123,7 +141,7 @@ form .input-box {
 #btn-calculate {
   cursor: pointer;
   padding: 0.4rem;
-  margin-top: 1.8rem;
+  margin-top: 1.0rem;
   border: none;
   border-radius: 4px;
   font-weight: 600;
@@ -172,7 +190,6 @@ form .input-box {
   color: var(--success);
 }
 
-
 #result #imc-description {
   /* background-color: rgb(2, 23, 16);   */
   width: 100%;
@@ -189,7 +206,7 @@ form .input-box {
 
 #more-information a {
   font-size: 0.75rem;
-  color: var(--purple-main);
+  color: #c36ef7;
   text-decoration: none;
   margin-right: 8px;
   transition: color 0.5s;
